--- a/Test-MapPCMD .ipynb
+++ b/Test-MapPCMD .ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ef89e69ab8ce165dc005b06f3d1dced5db423f15c7e650a478088092a05998f4"
+  "signature": "sha256:806f8eeebbaf7584f002d4d29d840c03588bbecf692c9e784ca27937a44c76c3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,37 +18,6 @@
       "import sys\n",
       "path_to_pyspark = os.path.join(spark_home,\"python\")\n",
       "sys.path.insert(0,path_to_pyspark)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "from pyspark import SparkContext, SparkConf\n",
-      "from collections import defaultdict\n",
-      "import sys, operator, math, imp, os, uuid, ConfigParser, pyodbc\n",
-      "import datetime as dt\n",
-      "from multiprocessing import Pool\n",
-      "import itertools as it\n",
-      "import threading\n",
-      "import networkx as nx\n",
-      "import numpy \n",
-      "import matplotlib . pyplot as plt\n",
-      "#Constants for real pcmd string\n",
-      "CONFIG_FILE = 'config.ini'\n",
-      "FIELD_SERVING_CELL_ID_PRIMARY = 21\n",
-      "FIELD_UE_LOCATION_CAPABILITY = 158\n",
-      "FIELD_CELL_ID = 131\n",
-      "START_CHAR_MEAS = '['\n",
-      "END_CHAR_PCMD = '|'\n",
-      "LENGTH_MEAS_DATA = 4\n",
-      "FIELD_CELL_ID_MEAS = 2\n",
-      "FIELD_RSRP_MEAS = 3\n",
-      "RSRP_MIN = -140.0"
      ],
      "language": "python",
      "metadata": {},
@@ -87,18 +56,48 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 2,
+       "prompt_number": 3,
        "text": [
         "'6'"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "    This code Does not work :)"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "from pyspark import SparkContext, SparkConf\n",
+      "from collections import defaultdict\n",
+      "import sys, operator, math, imp, os, uuid, ConfigParser, pyodbc\n",
+      "import datetime as dt\n",
+      "from multiprocessing import Pool\n",
+      "import itertools as it\n",
+      "import threading\n",
+      "import networkx as nx\n",
+      "import numpy \n",
+      "import matplotlib . pyplot as plt\n",
+      "#Constants for real pcmd string\n",
+      "CONFIG_FILE = 'config.ini'\n",
+      "FIELD_SERVING_CELL_ID_PRIMARY = 21\n",
+      "FIELD_UE_LOCATION_CAPABILITY = 158\n",
+      "FIELD_CELL_ID = 131\n",
+      "START_CHAR_MEAS = '['\n",
+      "END_CHAR_PCMD = '|'\n",
+      "LENGTH_MEAS_DATA = 4\n",
+      "FIELD_CELL_ID_MEAS = 2\n",
+      "FIELD_RSRP_MEAS = 3\n",
+      "RSRP_MIN = -140.0\n",
+      "\n",
       "def mapRealPCMDString(pcmdString):\n",
       "    servingCell, fieldDict = getFieldDictFromMeasRecord(pcmdString)\n",
       "    #debug\n",
@@ -119,17 +118,7 @@
       "        listOfMeasurements.append(((servingCell,cellID), \\\n",
       "\t\t\t(f1,f1*f1,serverDLRLC,serverDLRLC*serverDLRLC,f1*serverDLRLC,1)\t\\\n",
       "\t\t\t))\n",
-      "\treturn listOfMeasurements"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+      "\treturn listOfMeasurements\n",
       "\"\"\"\n",
       "this function gets each field requested from the pcmd file\n",
       "\"\"\"\n",
@@ -151,49 +140,9 @@
       " \n",
       "    fieldDict =defaultdict(list)\n",
       "    fieldDict[cellID].append((float(DLRLC_First)))\n",
-      "    return servingCell, fieldDict"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+      "    return servingCell, fieldDict\n",
       "\n",
-      "servingCell, fieldDict = getFieldDictFromMeasRecord(pcmdString[0])\n",
-      "print servingCell, fieldDict\n",
-      "servingCell, fieldDict = getFieldDictFromMeasRecord(pcmdString[8])\n",
-      "print fieldDict\n",
-      "for row in range(0, 8):\n",
-      "    print row\n",
-      "    servingCell, fieldDict = getFieldDictFromMeasRecord(pcmdString[row])\n",
-      "    print fieldDict"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "ename": "AttributeError",
-       "evalue": "'list' object has no attribute 'split'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-8-738c78e0c1f0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mservingCell\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfieldDict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetFieldDictFromMeasRecord\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpcmdString\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[0mservingCell\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfieldDict\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mservingCell\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfieldDict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetFieldDictFromMeasRecord\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpcmdString\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[0mfieldDict\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m<ipython-input-5-fdfd6d0f18df>\u001b[0m in \u001b[0;36mgetFieldDictFromMeasRecord\u001b[1;34m(pcmdString)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mgetFieldDictFromMeasRecord\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpcmdString\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;31m#assume this function is getting one record at a time\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0melementsOfPCMDString\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpcmdString\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\";\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[1;31m#elementsOfPCMDString =(pcmdString)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'split'"
-       ]
-      }
-     ],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "print len(fieldDict), fieldDict.items()\n",
+      "\n",
       " \n",
       "if True:\n",
       "    isRealPCMD, sparkMaster, measDir, caseId, rnpId = getBasicConfigInfo() \n",
@@ -204,30 +153,40 @@
       "    \t       .setAppName(sparkAppName)\n",
       "    \t       .set('spark.scheduler.mode', 'FAIR'))\n",
       "\n",
-      "#sc = SparkContext(conf = sparkConf)\n",
+      "sc = SparkContext(conf = sparkConf)\n",
       "pcmdStrings = sc.textFile('sample')\n",
       "\n",
       "cellStats = pcmdStrings\\\n",
       "\t\t.flatMap(lambda x: mapRealPCMDString(x)) \\\n",
       "\t    .reduceByKey(lambda x, y: reduceToSingleStat(x, y)) \\\n",
       "\t\t.collect()\n",
-      "sc.stop()"
+      "sc.stop()\n",
+      "\n",
+      "servingCell, fieldDict = getFieldDictFromMeasRecord(pcmdString[0])\n",
+      "print servingCell, fieldDict\n",
+      "servingCell, fieldDict = getFieldDictFromMeasRecord(pcmdString[8])\n",
+      "print fieldDict\n",
+      "for row in range(0, 8):\n",
+      "    print row\n",
+      "    servingCell, fieldDict = getFieldDictFromMeasRecord(pcmdString[row])\n",
+      "    print fieldDict\n",
+      "print len(fieldDict), fieldDict.items()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "ename": "NameError",
-       "evalue": "name 'fieldDict' is not defined",
+       "evalue": "name 'getBasicConfigInfo' is not defined",
        "output_type": "pyerr",
        "traceback": [
         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-7-0239f26f1c3e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mprint\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfieldDict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfieldDict\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0misRealPCMD\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msparkMaster\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmeasDir\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcaseId\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrnpId\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetBasicConfigInfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0msparkMaster\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mNameError\u001b[0m: name 'fieldDict' is not defined"
+        "\u001b[1;32m<ipython-input-2-f01a3ccdc181>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     65\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 67\u001b[1;33m     \u001b[0misRealPCMD\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msparkMaster\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmeasDir\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcaseId\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrnpId\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetBasicConfigInfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     68\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0msparkMaster\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     69\u001b[0m \u001b[0msparkAppName\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'PCMDMiner'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0muuid\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muuid1\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhex\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mNameError\u001b[0m: name 'getBasicConfigInfo' is not defined"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -613,8 +572,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "outputs": []
     },
     {
      "cell_type": "code",
