--- a/pyspark_test_rev3.ipynb
+++ b/pyspark_test_rev3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:400c1c46d36a1cc93c8c5c0aea2b8eb3a19fedb83e0a97890e2bc2b182ddc890"
+  "signature": "sha256:1021f05f51e8f24bab64f69e1b176b4c7ef7278a1408fa0472cbfa0f6978f402"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -97,14 +97,9 @@
      "collapsed": false,
      "input": [
       "print \"Type of sc\", type(sc)\n",
-      "r1 = sc.textFile('sample')\n",
-      "r2 =r1.flatMap(lambda x: x.split(\";\"))\n",
-      "r4 =r1.flatMap(lambda x: x.split())\n",
-      "mysize = int(r4.count())\n",
-      "print r2.take(3),r2.count(),'\\n',r4.take(1),r4.count(), \"mysize \", mysize\n",
-      "myiter = list(range(1,mysize))\n",
-      "\n",
-      "r5 = r4.map(lambda x: [(x,i) for i in range(1,mysize)])"
+      "field = 287\n",
+      "r1 = sc.textFile('sample')\\\n",
+      "    .map(lambda x: getField(x,field))\n"
      ],
      "language": "python",
      "metadata": {},
@@ -113,67 +108,50 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Type of sc <class 'pyspark.context.SparkContext'>\n",
-        "[u'6', u'87300844', u'311:480:fa4e:4f']"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 6057 \n",
-        "[u'6;87300844;311:480:fa4e:4f;-04:00;03:26;2014;45;76320870;34;14;0;1;100;;;35881205:087694:03;13477390096;311480099093477;e0f96785;;311:480:1486703;;;;;;;;;;;;;;;;;2001:4888:2011:b000:137:280:0:14;;;311:480:1486703;;;;;;;;;;3;;3;1;58;;;;;;;;;;;;;;;;;;;;;;;;;;;;186497;;;76319747;76320880;1;103;2;48;0;0;0;0;0;38;9;0;0;;;76320745;0;;;;;;;;0;0;0;0;1;0;0;1;0;0;1;0;0;0;0;3;-04:00;;;311:480:5dc4720;311:480:1486703;3;;6;;1;;;76319733;1;0;1891;0;0;0;0;0;;;;2;;76320755;76319940;76320745;2;;;;2;2;3;76320755;;0;;;;;;;2;;;;;;;;;;;;;;;0;;;;;;;;;;;;;;;;;;;;;;;;;;123;;;;;;;;;;;;0;0;;;;;1;;2001:4888:8000:fff0:137:200::;vzwims.mnc480.mcc311.gprs;;;2;5;;5;;;;;;;0;0;0;0;0;0;2;;;;;;;;;;;;0;;;2600:1001:8128:227e:0:17:ed59:8c01;2001:4888:8000:fff0:137:200::;vzwinternet.mnc480.mcc311.gprs;;;2;8;;6;;;;;;;4;164;3;24;0;15;2;;;;;;;;;;;;0;;;2600:1001:b118:ae79:0:17:ed59:8d01[1;344;311:480:5dc4720;24;23;2;344;311:480:5dc4720;24;24;344;311:480:1486703;40;|'] "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "20 mysize  20\n"
+        "Type of sc <class 'pyspark.context.SparkContext'>\n"
        ]
       }
      ],
-     "prompt_number": 101
+     "prompt_number": 120
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "r5.count()\n"
+      "r5 = r1.reduce(lambda x, y: x+y)\n",
+      "output = r1.collect()\n",
+      "print type(r5), output[1], r5\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 9,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "20"
+        "<type 'tuple'> (u'76320889', 298.0) (u'76320890', 0.0, u'76320891', 4.0, 269, -15, u'76320899', 0.0, u'76320880', 1.0, u'76320880', 0.0, u'76320803', 0.0, u'76320880', 0.0, u'76320880', 0.0, u'76320880', 0.0, u'76320880', 0.0, u'76320880', 4.0, u'76320867', 5.0, u'76320866', 0.0, 269, -15, u'76320869', 3.0, u'76320860', 1.0, u'76320846', 0.0, u'76320889', 298.0, u'76320870', 24.0)\n"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 123
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "print \"Type of sc\", type(sc)\n",
-      "r1 = sc.textFile('sample')\\\n",
-      "    .flatMap(lambda x: x.split())\n",
-      " \n",
+      "field = 287\n",
+      "r2 = sc.textFile('sample')\\\n",
+      "    .map(lambda x: getField(x,field)) \n",
+      "def getField(s, field):\n",
+      "        words = s.split(\";\")\n",
+      "        if len(words) < field:\n",
+      "            return len(words),-15\n",
+      "        else:\n",
+      "            return words[8-1],float(words[field-1])\n",
       "\n",
-      "#print \"r1 with first split\\n\" , r1.count(), r1.take(1)\n",
-      "mysize = int(r1.count())\n",
-      "mynew =range(mysize)\n",
       "\n",
-      "for row in range(mysize):\n",
-      "\n",
-      "    mynew[row] = r1.take(i)\n",
-      "print mynew[3]\n",
-      "\n",
-      "#print 'Now size',size(mynew), mynew[3]"
+      "print r2.take(5), type(r2)"
      ],
      "language": "python",
      "metadata": {},
@@ -183,7 +161,41 @@
        "stream": "stdout",
        "text": [
         "Type of sc <class 'pyspark.context.SparkContext'>\n",
-        "[u'6;87300844;311:480:fa4e:4f;-04:00;03:26;2014;45;76320870;34;14;0;1;100;;;35881205:087694:03;13477390096;311480099093477;e0f96785;;311:480:1486703;;;;;;;;;;;;;;;;;2001:4888:2011:b000:137:280:0:14;;;311:480:1486703;;;;;;;;;;3;;3;1;58;;;;;;;;;;;;;;;;;;;;;;;;;;;;186497;;;76319747;76320880;1;103;2;48;0;0;0;0;0;38;9;0;0;;;76320745;0;;;;;;;;0;0;0;0;1;0;0;1;0;0;1;0;0;0;0;3;-04:00;;;311:480:5dc4720;311:480:1486703;3;;6;;1;;;76319733;1;0;1891;0;0;0;0;0;;;;2;;76320755;76319940;76320745;2;;;;2;2;3;76320755;;0;;;;;;;2;;;;;;;;;;;;;;;0;;;;;;;;;;;;;;;;;;;;;;;;;;123;;;;;;;;;;;;0;0;;;;;1;;2001:4888:8000:fff0:137:200::;vzwims.mnc480.mcc311.gprs;;;2;5;;5;;;;;;;0;0;0;0;0;0;2;;;;;;;;;;;;0;;;2600:1001:8128:227e:0:17:ed59:8c01;2001:4888:8000:fff0:137:200::;vzwinternet.mnc480.mcc311.gprs;;;2;8;;6;;;;;;;4;164;3;24;0;15;2;;;;;;;;;;;;0;;;2600:1001:b118:ae79:0:17:ed59:8d01[1;344;311:480:5dc4720;24;23;2;344;311:480:5dc4720;24;24;344;311:480:1486703;40;|']"
+        "[(u'76320870', 24.0), (u'76320889', 298.0), (u'76320846', 0.0), (u'76320860', 1.0), (u'76320869', 3.0)]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " <class 'pyspark.rdd.PipelinedRDD'>\n"
+       ]
+      }
+     ],
+     "prompt_number": 102
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "x = 'blue;red;\"45\"'\n",
+      "print x\n",
+      "x.split(\";\")\n",
+      "print x\n",
+      "print x[10]\n",
+      "print r2.take(r2.count())"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "blue;red;\"45\"\n",
+        "blue;red;\"45\"\n",
+        "4\n",
+        "[(u'76320870', 24.0), (u'76320889', 298.0), (u'76320846', 0.0), (u'76320860', 1.0), (u'76320869', 3.0), (269, -15), (u'76320866', 0.0), (u'76320867', 5.0), (u'76320880', 4.0), (u'76320880', 0.0), (u'76320880', 0.0), (u'76320880', 0.0), (u'76320880', 0.0), (u'76320803', 0.0), (u'76320880', 0.0), (u'76320880', 1.0), (u'76320899', 0.0), (269, -15), (u'76320891', 4.0), (u'76320890', 0.0)]"
        ]
       },
       {
@@ -194,7 +206,7 @@
        ]
       }
      ],
-     "prompt_number": 146
+     "prompt_number": 101
     },
     {
      "cell_type": "code",
