Adding latest update file to REPO

--- a/pyspark_test_rev3.ipynb
+++ b/pyspark_test_rev3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1021f05f51e8f24bab64f69e1b176b4c7ef7278a1408fa0472cbfa0f6978f402"
+  "signature": "sha256:fa05cfb7ea8f8a7f17910c2094811d8ddc830d144cbf0d22a1ed19caaa665529"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -90,7 +90,7 @@
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -112,46 +112,34 @@
        ]
       }
      ],
-     "prompt_number": 120
+     "prompt_number": 16
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "r5 = r1.reduce(lambda x, y: x+y)\n",
-      "output = r1.collect()\n",
-      "print type(r5), output[1], r5\n"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "<type 'tuple'> (u'76320889', 298.0) (u'76320890', 0.0, u'76320891', 4.0, 269, -15, u'76320899', 0.0, u'76320880', 1.0, u'76320880', 0.0, u'76320803', 0.0, u'76320880', 0.0, u'76320880', 0.0, u'76320880', 0.0, u'76320880', 0.0, u'76320880', 4.0, u'76320867', 5.0, u'76320866', 0.0, 269, -15, u'76320869', 3.0, u'76320860', 1.0, u'76320846', 0.0, u'76320889', 298.0, u'76320870', 24.0)\n"
-       ]
-      }
-     ],
-     "prompt_number": 123
+     "source": [
+      "<b>The point and success of the small snippet below is that getField will arbritraly return a field by number from PCDM.  It will not do much checking for example if a portion of the record exists like the check for \"|\" indicating RSRP"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print \"Type of sc\", type(sc)\n",
+      "\n",
       "field = 287\n",
       "r2 = sc.textFile('sample')\\\n",
-      "    .map(lambda x: getField(x,field)) \n",
+      "    .map(lambda x: getField(x,field))\n",
+      "    \n",
+      "    \n",
       "def getField(s, field):\n",
       "        words = s.split(\";\")\n",
       "        if len(words) < field:\n",
       "            return len(words),-15\n",
       "        else:\n",
-      "            return words[8-1],float(words[field-1])\n",
+      "            return int(words[8-1]),float(words[field-1])\n",
       "\n",
       "\n",
-      "print r2.take(5), type(r2)"
+      "print r2.take(r2.count())"
      ],
      "language": "python",
      "metadata": {},
@@ -160,19 +148,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Type of sc <class 'pyspark.context.SparkContext'>\n",
-        "[(u'76320870', 24.0), (u'76320889', 298.0), (u'76320846', 0.0), (u'76320860', 1.0), (u'76320869', 3.0)]"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " <class 'pyspark.rdd.PipelinedRDD'>\n"
+        "[(76320870, 24.0), (76320889, 298.0), (76320846, 0.0), (76320860, 1.0), (76320869, 3.0), (269, -15), (76320866, 0.0), (76320867, 5.0), (76320880, 4.0), (76320880, 0.0), (76320880, 0.0), (76320880, 0.0), (76320880, 0.0), (76320803, 0.0), (76320880, 0.0), (76320880, 1.0), (76320899, 0.0), (269, -15), (76320891, 4.0), (76320890, 0.0)]\n"
        ]
       }
      ],
-     "prompt_number": 102
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -206,32 +186,7 @@
        ]
       }
      ],
-     "prompt_number": 101
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "cellStats = pcmdStrings\\\n",
-      "    .flatMap(lambda x: mapRealPCMDString(x)) \\ \n",
-      "    .reduceByKey(lambda x, y: reduceToSingleStat(x, y)) \\\n",
-      "    .collect()\n",
-      "    \n",
-      "sc.stop()\n",
-      "\n",
-      "servingCell, fieldDict = getFieldDictFromMeasRecord(pcmdString[0])\n",
-      "print servingCell, fieldDict\n",
-      "servingCell, fieldDict = getFieldDictFromMeasRecord(pcmdString[8])\n",
-      "print fieldDict\n",
-      "for row in range(0, 8):\n",
-      "    print row\n",
-      "    servingCell, fieldDict = getFieldDictFromMeasRecord(pcmdString[row])\n",
-      "    print fieldDict\n",
-      "print len(fieldDict), fieldDict.items()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
